[gd_scene load_steps=5 format=2]

[ext_resource path="res://Gameplay.gd" type="Script" id=1]
[ext_resource path="res://fontfiles/game_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://fontfiles/menu_medium.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Timer.gd" type="Script" id=4]

[node name="Node" type="Node"]

[node name="TopLabels" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="TopLabels"]
margin_right = 1219.0
margin_bottom = 921.0

[node name="ColorRect" type="ColorRect" parent="TopLabels/ColorRect"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1192.0
margin_bottom = 100.0
color = Color( 0.807843, 0.807843, 0.807843, 1 )

[node name="ColorRect2" type="ColorRect" parent="TopLabels/ColorRect"]
margin_left = 8.0
margin_top = 15.0
margin_right = 1192.0
margin_bottom = 71.0
color = Color( 0.682353, 0.682353, 0.682353, 1 )

[node name="LevelLabel" type="RichTextLabel" parent="TopLabels/ColorRect"]
margin_left = 1061.0
margin_top = 76.0
margin_right = 1198.0
margin_bottom = 116.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "This needs text"
scroll_active = false

[node name="GameControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="LoseControl" type="Control" parent="."]
margin_left = 100.0
margin_top = 220.0
margin_right = 1080.0
margin_bottom = 546.0

[node name="ColorRect" type="ColorRect" parent="LoseControl"]
margin_right = 980.0
margin_bottom = 328.0
color = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="Label" type="Label" parent="LoseControl/ColorRect"]
margin_right = 980.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( -521, 150 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "You have clicked an INCORRECT object."
align = 1
autowrap = true

[node name="Label2" type="Label" parent="LoseControl/ColorRect"]
margin_top = 227.0
margin_right = 980.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( -521, 150 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Click to retry."
align = 1
autowrap = true

[node name="Button" type="Button" parent="LoseControl"]
margin_left = -100.0
margin_top = -212.0
margin_right = 1101.0
margin_bottom = -117.0
custom_fonts/font = ExtResource( 3 )
text = "Forfeit?"

[node name="WinControl" type="Control" parent="."]
visible = false
margin_left = 100.0
margin_top = 220.0
margin_right = 1080.0
margin_bottom = 546.0

[node name="ColorRect" type="ColorRect" parent="WinControl"]
margin_right = 980.0
margin_bottom = 328.0
color = Color( 0.752941, 0.752941, 0.752941, 1 )

[node name="Label" type="Label" parent="WinControl/ColorRect"]
margin_right = 980.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( -521, 150 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "You have COMPLETED this level!"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="WinControl/ColorRect"]
margin_top = 227.0
margin_right = 980.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( -521, 150 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Click to continue."
align = 1
autowrap = true

[node name="Timer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[connection signal="pressed" from="LoseControl/Button" to="GameControl" method="_on_Button_pressed"]
